# mqtt2hue

./: .gitmodules  Cheatsheet.org  Config.hs  Debug.hs  HueAPI.hs  HueAPIV2.hs  Logic.hs  MQTTAPI.hs  Main.hs  MyAeson.hs  README.md  README.org  References.org  SSDP.hs  Semaphores.hs  Server.hs  TODO.org  Types.hs  config.yaml  default.nix  module.nix  mqtt2hue.cabal  mqtt2hue.nix  shell.nix
Logic/: Automation.hs  Common.hs  HueV1.hs  HueV2.hs  State.hs
Servant/: EventStream.hs
cert2/: c.py  shell.nix
certificate/: gen.sh  openssl.conf
doc/: mqtt.org
doc/api/: v2.org
examples/MQTT/: devices.json  light.json  ls0.json
v2/: tests.org
