Cabal-Version:  3.0
name:           mqtt2hue
version:        1.0
category:       automation
synopsis:       Whatever
description:
  Soon to appear.
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
tested-with:    GHC==9.2.1
build-type:     Simple

executable mqtt2hue
  default-language: Haskell2010
  build-depends: base
  build-depends: network
  build-depends: network-multicast
  build-depends: network-info
  build-depends: Cabal
  build-depends: directory
  build-depends: blaze-html
  build-depends: blaze-markup
  build-depends: warp
  build-depends: warp-tls
  build-depends: net-mqtt
  build-depends: wai
  build-depends: wai-logger
  build-depends: wai-extra
  build-depends: wai-enforce-https
  build-depends: time
  build-depends: string-conversions
  build-depends: http-media
  build-depends: http-types
  build-depends: mtl
  build-depends: attoparsec
  build-depends: bytestring
  build-depends: base-compat
  build-depends: lucid
  build-depends: containers
  build-depends: servant
  build-depends: servant-xml
  build-depends: servant-server
  build-depends: aeson
  build-depends: template-haskell
  build-depends: network-uri
  build-depends: text
  build-depends: yaml
  build-depends: hashable
  build-depends: xmlbf
  build-depends: unordered-containers
  build-depends: http-api-data
  build-depends: large-hashable
  build-depends: vector
  
  main-is: Main.hs
  ghc-options: -threaded -rtsopts
  other-modules:
   Logic
   Server
   Types
   HueAPI
   HueAPIV2
   MQTTAPI
   MyAeson
   Semaphores
   Config
   Debug
   SSDP
   Logic.Automation
   Logic.Common
   Logic.HueV1
   Logic.HueV2
   Servant.EventStream
